objects/vlocity_cmt__BusinessSite__c.object
<CustomObject>
    <description>Sites track the service and retail locations where customers may obtain products or services from your organization or your partner organizations. In the communications industry, these represent retail stores or customer service locations. In the public sector, these represent the locations where benefits service providers operate. A site is located by address as well as geo-location data. A site must be defined for an account which may be a partner account or an internal organization account used to describe your company.</description>
    <fields>
        <fullName>AssociatedWarehouseDefault__c</fullName>
        <label>Associated Warehouse Default</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssociatedWarehouseId__c</fullName>
        <description>Associated Warehouse Code</description>
        <inlineHelpText>Associated Warehouse Code</inlineHelpText>
        <label>Associated Warehouse</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingMode__c</fullName>
        <label>Billing Mode</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>BillingMode</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CUIT__c</fullName>
        <description>PFTA-7703 - CUIT number of the agency</description>
        <formula>vlocity_cmt__OrganizationId__r.CuitNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CUIT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Channel_Type_2__c</fullName>
        <description>Stores the level 2 of the type of channels.</description>
        <label>Channel Type 2</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Channel_Type_3__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>ChannelType2</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Channel_Type_3__c</fullName>
        <description>Stores the level 3 of the type of channels.</description>
        <label>Channel Type 3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ChannelType3</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Channel_Type__c</fullName>
        <description>Stores the first level of the type of channels.</description>
        <label>Channel Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Channel_Type_2__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>ChannelType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <description>Used to indicate the top level of the channels in the solution based in the value selected in the Channel_Type__c field.</description>
        <label>Channel</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Channel_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Channel</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cluster__c</fullName>
        <description>PFTA-8810 - Stores the list of clusters for the store locations initially.</description>
        <label>Cluster</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Cluster</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <description>PFTA-7703 - Stores the Code of point of sales, agency or ST.</description>
        <externalId>true</externalId>
        <label>Code</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ContactMode__c</fullName>
        <description>PFTA-9163 - used to identify if the Contact mode was human or non human.</description>
        <label>Contact Mode</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ContactMode</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_of_activation__c</fullName>
        <description>PFTA-7703 - Stores the Date of activation of the store location</description>
        <label>Date of activation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_deactivation__c</fullName>
        <description>PFTA-7703 - Stores the date of deactivation of the store location.</description>
        <label>Date of deactivation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_homologation__c</fullName>
        <description>PFTA-7703 - Stores the date when the store location was homologated.</description>
        <label>Date of homologation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Has_experience_area__c</fullName>
        <defaultValue>false</defaultValue>
        <description>PFTA-7703 - Used to indicate if the store location has or not experience area.</description>
        <label>Has experience area?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_technical_service__c</fullName>
        <description>PFTA-7703 - Indicates if the point of sales has or not technical service.</description>
        <label>Has technical service?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_subagent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>PFTA-7703 - Used to indicate if an agent is subagent or not. Applies just for point of sales AG.</description>
        <label>Is subagent?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Location</description>
        <inlineHelpText>Location</inlineHelpText>
        <label>Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipName>Store_Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Momento_PDV__c</fullName>
        <description>PFTA-8813 - The values depends of the record type and represents a classificaion of the store location in TA.</description>
        <label>Momento PDV</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Homologado</fullName>
                </value>
                <value>
                    <fullName>Informado</fullName>
                </value>
                <value>
                    <fullName>Personal</fullName>
                </value>
                <value>
                    <fullName>Telecom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ownership__c</fullName>
        <description>PFTA-7703 - Used to indicate if the store location is owned by TA or who the owner is.</description>
        <label>Ownership</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Propio</fullName>
                </value>
                <value>
                    <fullName>Tercero</fullName>
                </value>
                <value>
                    <fullName>Autogestion</fullName>
                </value>
                <value>
                    <fullName>E-commerce</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PaymentChannel__c</fullName>
        <description>PFTA-9035 - Used to store the payment channel and code by Store location that will be passed to the order.</description>
        <label>Payment Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PaymentChannel</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PointOfSaleAddressNumber__c</fullName>
        <description>Point Of Sale Address Number</description>
        <inlineHelpText>Point Of Sale Address Number</inlineHelpText>
        <label>Address Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PointOfSaleAlternativePhone__c</fullName>
        <description>Point Of Sale Alternative Phone</description>
        <inlineHelpText>Point Of Sale Alternative Phone</inlineHelpText>
        <label>Point Of Sale Alternative Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PointOfSaleChannel__c</fullName>
        <description>Point Of Sale Channel</description>
        <inlineHelpText>Point Of Sale Channel</inlineHelpText>
        <label>Point Of Sale Channel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Presencial - Oficinas comerciales</fullName>
                </value>
                <value>
                    <fullName>Presencial - Agentes</fullName>
                </value>
                <value>
                    <fullName>Ecommerce</fullName>
                </value>
                <value>
                    <fullName>Telefónico</fullName>
                </value>
                <value>
                    <fullName>Televentas</fullName>
                </value>
                <value>
                    <fullName>Ejecutivos Pymes</fullName>
                </value>
                <value>
                    <fullName>Grandes Clientes</fullName>
                </value>
                <value>
                    <fullName>Gobierno y Empresas</fullName>
                </value>
                <value>
                    <fullName>VIP</fullName>
                </value>
                <value>
                    <fullName>Telefónico PyMEs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PointOfSaleDescription__c</fullName>
        <description>Point Of Sale Description</description>
        <inlineHelpText>Point Of Sale Description</inlineHelpText>
        <label>Point Of Sale Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PointOfSaleId__c</fullName>
        <description>Point of Sale Code (VMI-NET service ID)</description>
        <inlineHelpText>Point of Sale Code (VMI-NET service ID)</inlineHelpText>
        <label>Point Of Sale</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PointOfSalePhone__c</fullName>
        <description>Point Of Sale Phone</description>
        <inlineHelpText>Point Of Sale Phone</inlineHelpText>
        <label>Point Of Sale Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PointOfSaleStorePickupEnabled__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Point Of Sale Store Pickup Enabled</description>
        <inlineHelpText>Point Of Sale Store Pickup Enabled</inlineHelpText>
        <label>Point Of Sale Store Pickup Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PointOfSaleType__c</fullName>
        <description>PFTA-8812 - Stores the type of facility that the store location has.</description>
        <label>Type of facility</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PointOfSaleTypesSet</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PostOfficeCode__c</fullName>
        <description>Post Office Code</description>
        <inlineHelpText>Codigo o Numero de Sucursal</inlineHelpText>
        <label>Post Office Code</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PostOfficeDeactivator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Post Office Deactivator</description>
        <inlineHelpText>Usuario que inhabilito la Oficina Postal</inlineHelpText>
        <label>Post Office Deactivator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Store_Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PostOfficeEndDate__c</fullName>
        <description>Post Office End Date</description>
        <inlineHelpText>Fin de actividad de Oficina Postal</inlineHelpText>
        <label>Post Office End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PostOfficeHours__c</fullName>
        <description>Post Office Hours</description>
        <inlineHelpText>Horarios de atencion de oficinas postales</inlineHelpText>
        <label>Post Office Hours</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PostOfficePhone__c</fullName>
        <description>Post Office Phone</description>
        <inlineHelpText>Telefono de Oficina Postal</inlineHelpText>
        <label>Post Office Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PostOfficeStartDate__c</fullName>
        <description>Post Office Start Date</description>
        <inlineHelpText>Inicio de actividad en Oficina Postal</inlineHelpText>
        <label>Post Office Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Postsales__c</fullName>
        <description>PFTA-7703 - used to indicate if the store location has or not Postsales.</description>
        <label>Postsales?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>Store the region that the store location belongs to.</description>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Region</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Used to indicate the status of the point of sales or agency.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dado de baja</fullName>
                </value>
                <value>
                    <fullName>Activo</fullName>
                </value>
                <value>
                    <fullName>Pendiente activación</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subagent_Name__c</fullName>
        <description>PFTA-7703 - Stores the name of the subagent of an Agent</description>
        <label>Subagent Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subregion__c</fullName>
        <description>PFTA-8807 - Stores the subregion that the store location belongs to.
It is depending of the region assigned to the store location.</description>
        <label>Subregion</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Region__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Subregion</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Technical_service_level__c</fullName>
        <description>PFTA-8814 - Is activated when the Has_technical_service__c takes the Yes value and is used to indicated the level of service of an store location.</description>
        <label>Technical service level</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Has_technical_service__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dentro</fullName>
                </value>
                <value>
                    <fullName>Dentro y fuera</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>POS</fullName>
                </value>
                <value>
                    <fullName>PostOffice</fullName>
                    <label>Post Office</label>
                </value>
                <value>
                    <fullName>Agente</fullName>
                </value>
                <value>
                    <fullName>Proveedor</fullName>
                </value>
                <value>
                    <fullName>Oficina Comercial</fullName>
                </value>
                <value>
                    <fullName>Deposito Central TP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_contact__c</fullName>
        <description>PFTA-9160 - Field used to indicate if the store location attends In or/and out type of contacts.</description>
        <label>Type of contact</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>TyeOfContact</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_office__c</fullName>
        <description>Used to indicate if the office is classical or tradicional design.</description>
        <label>Type of office</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Tradicional</fullName>
                </value>
                <value>
                    <fullName>Nuevo</fullName>
                </value>
                <value>
                    <fullName>Agente</fullName>
                </value>
                <value>
                    <fullName>Oficina Comercial</fullName>
                </value>
                <value>
                    <fullName>Proveedor</fullName>
                </value>
                <value>
                    <fullName>Deposito Central TP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_technical_service__c</fullName>
        <description>PFTA-8822 - Store the classification given to a Technical Service</description>
        <label>Type of technical service</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>N0</fullName>
                </value>
                <value>
                    <fullName>N1</fullName>
                </value>
                <value>
                    <fullName>N2</fullName>
                </value>
                <value>
                    <fullName>N3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__City__c</fullName>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Country__c</fullName>
        <label>Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Geolocation__c</fullName>
        <label>Location</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OperatingHoursId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Operating Hours</label>
        <referenceTo>vlocity_cmt__OperatingHours__c</referenceTo>
        <relationshipLabel>Sites</relationshipLabel>
        <relationshipName>Sites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OrganizationId__c</fullName>
        <label>Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sites</relationshipLabel>
        <relationshipName>OrganizationSites</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PostalCode__c</fullName>
        <label>Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__State__c</fullName>
        <label>State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StreetAddress__c</fullName>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Site</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>AssociatedWarehouseId__c</columns>
        <columns>PointOfSaleAddressNumber__c</columns>
        <columns>PointOfSaleChannel__c</columns>
        <columns>PointOfSaleDescription__c</columns>
        <columns>vlocity_cmt__StreetAddress__c</columns>
        <columns>vlocity_cmt__OrganizationId__c</columns>
        <columns>PostOfficeHours__c</columns>
        <columns>PostOfficePhone__c</columns>
        <columns>vlocity_cmt__Country__c</columns>
        <columns>vlocity_cmt__State__c</columns>
        <columns>Type__c</columns>
        <columns>PointOfSaleId__c</columns>
        <columns>PostOfficeCode__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Call_Center</fullName>
        <columns>NAME</columns>
        <columns>Channel__c</columns>
        <columns>Channel_Type_3__c</columns>
        <columns>vlocity_cmt__OrganizationId__c</columns>
        <columns>AssociatedWarehouseId__c</columns>
        <columns>vlocity_cmt__StreetAddress__c</columns>
        <columns>PointOfSaleAddressNumber__c</columns>
        <columns>vlocity_cmt__State__c</columns>
        <columns>Status__c</columns>
        <columns>Region__c</columns>
        <columns>Has_technical_service__c</columns>
        <columns>vlocity_cmt__OperatingHoursId__c</columns>
        <columns>Cluster__c</columns>
        <columns>Technical_service_level__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>vlocity_cmt__BusinessSite__c.Call_Center</value>
        </filters>
        <label>Call Center</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Digital</fullName>
        <columns>NAME</columns>
        <columns>vlocity_cmt__StreetAddress__c</columns>
        <columns>PointOfSaleAddressNumber__c</columns>
        <columns>Region__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>vlocity_cmt__BusinessSite__c.Digital</value>
        </filters>
        <label>Digital</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Punto_de_venta_AG</fullName>
        <columns>NAME</columns>
        <columns>Channel__c</columns>
        <columns>Channel_Type_3__c</columns>
        <columns>vlocity_cmt__OrganizationId__c</columns>
        <columns>AssociatedWarehouseId__c</columns>
        <columns>vlocity_cmt__StreetAddress__c</columns>
        <columns>PointOfSaleAddressNumber__c</columns>
        <columns>vlocity_cmt__State__c</columns>
        <columns>Status__c</columns>
        <columns>Region__c</columns>
        <columns>Has_technical_service__c</columns>
        <columns>vlocity_cmt__OperatingHoursId__c</columns>
        <columns>Cluster__c</columns>
        <columns>Technical_service_level__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>vlocity_cmt__BusinessSite__c.Punto_de_venta_AG</value>
        </filters>
        <label>Punto de venta AG</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Punto_de_venta_GGCC</fullName>
        <columns>NAME</columns>
        <columns>Channel__c</columns>
        <columns>Channel_Type_3__c</columns>
        <columns>vlocity_cmt__OrganizationId__c</columns>
        <columns>AssociatedWarehouseId__c</columns>
        <columns>vlocity_cmt__StreetAddress__c</columns>
        <columns>PointOfSaleAddressNumber__c</columns>
        <columns>vlocity_cmt__State__c</columns>
        <columns>Status__c</columns>
        <columns>Region__c</columns>
        <columns>Has_technical_service__c</columns>
        <columns>vlocity_cmt__OperatingHoursId__c</columns>
        <columns>Cluster__c</columns>
        <columns>Technical_service_level__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>vlocity_cmt__BusinessSite__c.Punto_de_venta_GGCC</value>
        </filters>
        <label>Punto de venta GGCC</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Punto_de_venta_OC</fullName>
        <columns>NAME</columns>
        <columns>Channel__c</columns>
        <columns>Channel_Type_3__c</columns>
        <columns>vlocity_cmt__OrganizationId__c</columns>
        <columns>AssociatedWarehouseId__c</columns>
        <columns>vlocity_cmt__StreetAddress__c</columns>
        <columns>PointOfSaleAddressNumber__c</columns>
        <columns>vlocity_cmt__State__c</columns>
        <columns>Status__c</columns>
        <columns>Region__c</columns>
        <columns>Has_technical_service__c</columns>
        <columns>vlocity_cmt__OperatingHoursId__c</columns>
        <columns>Cluster__c</columns>
        <columns>Technical_service_level__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>vlocity_cmt__BusinessSite__c.Punto_de_venta_OC</value>
        </filters>
        <label>Punto de venta OC</label>
        <language>es</language>
    </listViews>
    <listViews>
        <fullName>Punto_de_venta_VIP</fullName>
        <columns>NAME</columns>
        <columns>Channel__c</columns>
        <columns>Channel_Type_3__c</columns>
        <columns>vlocity_cmt__OrganizationId__c</columns>
        <columns>AssociatedWarehouseId__c</columns>
        <columns>vlocity_cmt__StreetAddress__c</columns>
        <columns>PointOfSaleAddressNumber__c</columns>
        <columns>vlocity_cmt__State__c</columns>
        <columns>Status__c</columns>
        <columns>Region__c</columns>
        <columns>Has_technical_service__c</columns>
        <columns>vlocity_cmt__OperatingHoursId__c</columns>
        <columns>Cluster__c</columns>
        <columns>Technical_service_level__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>vlocity_cmt__BusinessSite__c.Punto_de_venta_VIP</value>
        </filters>
        <label>Punto de venta VIP</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Sucursales_de_Correo</fullName>
        <columns>NAME</columns>
        <columns>vlocity_cmt__OrganizationId__c</columns>
        <columns>vlocity_cmt__StreetAddress__c</columns>
        <columns>PointOfSaleAddressNumber__c</columns>
        <columns>vlocity_cmt__State__c</columns>
        <columns>Region__c</columns>
        <columns>vlocity_cmt__OperatingHoursId__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>vlocity_cmt__BusinessSite__c.Sucursales_de_Correo</value>
        </filters>
        <label>Sucursales de Correo</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Taller_de_ST</fullName>
        <columns>NAME</columns>
        <columns>vlocity_cmt__StreetAddress__c</columns>
        <columns>PointOfSaleAddressNumber__c</columns>
        <columns>Region__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>vlocity_cmt__BusinessSite__c.Taller_de_ST</value>
        </filters>
        <label>Taller de ST</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sites</pluralLabel>
    <recordTypes>
        <fullName>Call_Center</fullName>
        <active>true</active>
        <description>Store the information of a Call Center</description>
        <label>Call Center</label>
    </recordTypes>
    <recordTypes>
        <fullName>Digital</fullName>
        <active>true</active>
        <description>Store the information of the store locations responsible of digital channel.</description>
        <label>Digital</label>
    </recordTypes>
    <recordTypes>
        <fullName>Punto_de_venta_AG</fullName>
        <active>true</active>
        <description>Represents the agencies contracted by Telecom Argentina to sell the company products.</description>
        <label>Punto de venta AG</label>
    </recordTypes>
    <recordTypes>
        <fullName>Punto_de_venta_GGCC</fullName>
        <active>true</active>
        <description>Represents the Point Of Sale to sell products to the wholesalers</description>
        <label>Punto de venta GGCC</label>
    </recordTypes>
    <recordTypes>
        <fullName>Punto_de_venta_OC</fullName>
        <active>true</active>
        <description>Represents the Point Of Sales  owned by Telecom Argentina.</description>
        <label>Punto de venta OC</label>
    </recordTypes>
    <recordTypes>
        <fullName>Punto_de_venta_VIP</fullName>
        <active>true</active>
        <description>Stores the information of the VIP point of sales of TA</description>
        <label>Punto de venta VIP</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sucursales_de_Correo</fullName>
        <active>true</active>
        <description>Represents te post office available for pickup in TA.</description>
        <label>Sucursales de Correo</label>
    </recordTypes>
    <recordTypes>
        <fullName>Taller_de_ST</fullName>
        <active>true</active>
        <description>Represents the technical service points contracted by Telecom Argentina to repair the mobile devices.</description>
        <label>Taller de ST</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>